--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="logo-image">
             <img src="shri.png" padding="2px" class="img-fluid">
       </div>
-&nbsp; &nbsp;
+&nbsp;
           <b><u><a  class="navbar-brand display-7"  style=  " padding-right: 1px; font-size:xx-large ; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;  color: red" href="https://github.com/ShriNaik88">Shridhar S Naik</a></u></b>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -217,6 +217,7 @@
        </a>
       </div>
     </footer>
+<p class="lead text-muted text-center"> &copy; 2022 ShriNaik88 by Shridhar Naik </p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
